syntax = "proto3";

package erc20.supply.types.v1;

message TotalSupplies {
  repeated TotalSupply total_supplies = 1;
}

// message StorageKeys{
//   repeated StorageKey storage_keys = 1;
// }

message TotalSupply {
  string address = 1;
  string supply = 2;
  // string transaction = 3;

  // string name = 4; // string
  // string symbol = 5; // string
  // uint32 decimals = 6; // uint8
}

// message EthCallSupplies{
//   repeated EthCallSupply eth_call_supplies = 1;
// }

// message EthCallSupply{
//   string address = 1;
//   string supply = 2;
// }
// message StorageKey
// {
//   string address = 1;
//   string key = 2;
//   string supply = 3;
// }
